php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #6208 chunk_split("", -2); causes core dump
Submitted: 2000-08-17 04:34 UTC Modified: 2000-08-17 04:51 UTC
From: alex at zend dot com Assigned:
Status: Closed Package: Reproducible Crash
PHP Version: 4.0.1pl2 OS:
Private report: No CVE-ID: None
 [2000-08-17 04:34 UTC] alex at zend dot com
<?
	chunk_split("", -2);
?>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-08-17 04:51 UTC] stas@php.net
Fixed in CVS, thanks.
 [2012-05-23 11:30 UTC] cataphract@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src.git;a=commit;h=1eff3b01b8e2fdeadc9640ae1a19b8330277ccc5
Log: Fixed bug #6208: memory leak in grapheme_extract()
 [2014-10-07 23:25 UTC] stas@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=1eff3b01b8e2fdeadc9640ae1a19b8330277ccc5
Log: Fixed bug #6208: memory leak in grapheme_extract()
 [2014-10-07 23:36 UTC] stas@php.net
Automatic comment on behalf of cataphract
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=1eff3b01b8e2fdeadc9640ae1a19b8330277ccc5
Log: Fixed bug #6208: memory leak in grapheme_extract()
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Aug 28 10:00:01 2026 UTC