Fixed bug #6208: memory leak in grapheme_extract()