ext/intl/grapheme/grapheme_string.c
@@ -818,6 +818,7 @@ PHP_FUNCTION(grapheme_extract)
 		}
 		else {
 			/* initialize next */
+			zval_dtor(next);
             ZVAL_LONG(next, lstart);
 		}
 	}
